--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<p class="introduction">L'agence La Panthère est une agence web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -124,8 +124,10 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<p class="commentary">"L'agence La Panthère est une excellente agence web ! 
+					Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
+					Cela nous a aidé à doubler nos ventes en ligne à Lyon."
+					<span class="legend"> Maxime Guibard, PDG de A vos fourchettes</span> 
 			</div>
 		</div>
 	</div>
@@ -154,7 +156,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<p class="portfolio_title">Nous travaillons avec beaucoup de clients, voici nos réalisations.</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
