--- a/index.html
+++ b/index.html
@@ -208,16 +208,16 @@
 					</h3>
 					<ul class="row row-no-gutters social text-center">
 						<li class="col-sm-3">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</li>
 						<li class="col-sm-3">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</li>
 						<li class="col-sm-3">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 						</li>
 						<li class="col-sm-3">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</li>
 					</ul>
 				</section>
