--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
 			<!-- bloc-7 END -->
 
 			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" href="contact.html" scrollToTarget('1' )"><span class="fa fa-chevron-up"></span></a>
+			<a class="bloc-button btn btn-d scrollToTop" href="contact.html" aria-label="Scroll" scrollToTarget('1' )"><span class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
 
 
