Dernière modifications avant soutenance / + de sémantiques

--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-							</li>
-							<li>
 								<a href="contact.html">Contact</a>
 							</li>
 						</ul>
@@ -112,10 +110,16 @@
 						</p>
 					</section>
 					<figure class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+						<blockquote>
 						"L'agence La Panthère est une excellente agence web ! 
-							Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
-							Cela nous a aidé à doubler nos ventes en ligne à Lyon."
-						<figcaption><strong>Guibard, PDG de A vos fourchettes</strong></figcaption>
+						Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
+						Cela nous a aidé à doubler nos ventes en ligne à Lyon."
+						</blockquote>
+						<figcaption>
+							<cite>
+								Guibard, PDG de A vos fourchettes
+							</cite>
+						</figcaption>
 					</figure> 
 				</article>
 				<!-- bloc-2-services END -->
@@ -137,11 +141,11 @@
 
 				<!-- bloc-4-portfolio -->
 				<article class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-					<div class="container bloc-lg text-center">
+					<header class="container bloc-lg text-center">
 						<h2 class="col-sm-12">
 							Nous travaillons avec beaucoup de clients, voici nos réalisations.
 						</h2>
-					</div>
+					</header>
 					<div class="row tight-width-whitespace portfolio-row">
 						<section class="col-sm-6 text-center">
 							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/livres_journaux.webp" alt="Photo de journaux pour le portfolio de l'agence La Panthère, entreprise de web design à Lyon." class="img-responsive portfolio-thumb" /></a>
@@ -222,46 +226,44 @@
 					</ul>
 				</section>
 
-				<section class="container bloc-sm">
-					<ul class="centrer">
-						<li class="col-sm-4">
-							<h4 class="white">
-								Entreprise
-							</h4>
-							<ul>
-								<li><a href="lesmeilleursentreprisesalyon.com">Lesmeilleursentreprisesalyon.com</a></li>
-								<li><a href="travailsurlyon.com">travailsurlyon.com</a></li>
-							</ul>		
-						</li>
-						<li class="col-sm-4">
-							<h4 class="white">
-								Webdesign
-							</h4>
-							<ul>
-								<li><a href="bestwebdesign.com">bestwebdesign.com</a></li>
-								<li><a href="annuairewebdesign.com">annuairewebdesign.com</a></li>
-								<li><a href="toutsavoirsurlewebdesign.com">toutsavoirsurlewebdesign.com</a></li>
-							</ul>
-						</li>
-						<li class="col-sm-4">
-							<h4 class="white">
-								Lyon
-							</h4>
-							<ul>
-								<li><a href="Lyoninformatique.com">betterseo.com</a></li>
-								<li><a href="agencealyon.com">ameliorerseo.com</a></li>
-								<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							</ul>
-						</li>
-					</ul>
-				</section>
+				<ul class="centrer container bloc-sm">
+					<li class="col-sm-4">
+						<h4 class="white">
+							Entreprise
+						</h4>
+						<ul>
+							<li><a href="lesmeilleursentreprisesalyon.com">Lesmeilleursentreprisesalyon.com</a></li>
+							<li><a href="travailsurlyon.com">travailsurlyon.com</a></li>
+						</ul>		
+					</li>
+					<li class="col-sm-4">
+						<h4 class="white">
+							Webdesign
+						</h4>
+						<ul>
+							<li><a href="bestwebdesign.com">bestwebdesign.com</a></li>
+							<li><a href="annuairewebdesign.com">annuairewebdesign.com</a></li>
+							<li><a href="toutsavoirsurlewebdesign.com">toutsavoirsurlewebdesign.com</a></li>
+						</ul>
+					</li>
+					<li class="col-sm-4">
+						<h4 class="white">
+							Lyon
+						</h4>
+						<ul>
+							<li><a href="Lyoninformatique.com">betterseo.com</a></li>
+							<li><a href="agencealyon.com">ameliorerseo.com</a></li>
+							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
+						</ul>
+					</li>
+				</ul>
 			</footer>
 			<!-- Footer - bloc-8 END -->
 
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" defer></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js" defer></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"defer></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" defer></script>
 			<script src="./js/blocs.js" defer></script>
 
 		</div>
