--- a/contact.html
+++ b/contact.html
@@ -77,96 +77,88 @@
 				<!-- bloc-6 END -->
 
 				<!-- bloc-7 -->
-				<section class="bloc bgc-white l-bloc" id="bloc-7">
+				<div class="bloc bgc-white l-bloc" id="bloc-7">
 					<div class="container bloc-lg">
 						<div class="col-sm-6">
-							<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas, Désolé pour le dérangement !">
-								<div class="form-group">
+							<form id="form_1" novalidate>
+								<fieldset class="form-group">
 									<label for="name">
 										Nom
 										<input id="name" class="form-control" required />
 									</label>
-								</div>
-								<div class="form-group">
+								</fieldset>
+								<fieldset class="form-group">
 									<label for="email">
 										Adresse email
 										<input id="email" class="form-control" type="email" required />
 									</label>
-								</div>
-								<div class="form-group">
+								</fieldset>
+								<fieldset class="form-group">
 									<label for="input_504">
 										Comment nous avez-vous connu ?
 										<input class="form-control" type="email" required id="input_504" />
 									</label>
-								</div>
-								<div class="form-group">
+								</fieldset>
+								<fieldset class="form-group">
 									<label for="message">
 										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 										<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 									</label>
-								</div> 
+								</fieldset> 
 								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine greentana" type="submit">
 									Envoyer
 								</button>
 							</form>
 						</div>
 						<div class="col-sm-6">
-						<p>
-							contact@agencelapanthere.com<br>
-							2 place Sathonay 69001 Lyon<br>
-							Ouvert de 9h à 18h, du lundi au vendredi<br>
-						</p>
+							<address>
+								contact@agencelapanthere.com<br>
+								2 place Sathonay 69001 Lyon<br>
+								Ouvert de 9h à 18h, du lundi au vendredi<br>
+							</address>
+						</div>
 					</div>
-				</section>
+				</div>
 			</main>
 			<!-- bloc-7 END -->
 
 			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" href="contact.html" aria-label="Scroll" scrollToTarget('1' )"><span class="fa fa-chevron-up"></span></a>
+			<a class="bloc-button btn btn-d scrollToTop" aria-label="Scroll" onclick="scrollToTarget('1' )"><span class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
 
 
 			<!-- Footer - bloc-8 -->
 			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 				<section class="container bloc-sm">
-					
-				<h2 class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
-				</h2>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
+					<h2 class="text-center white">
+					Agence La Panthère - Agence web basée à Lyon.
+					</h2>
+					<ul class="row row-no-gutters social text-center">
+						<li class="col-sm-3">
 							<a class="social" href="index.html" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
+						</li>
+						<li class="col-sm-3">
 							<a class="social" href="index.html" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
+						</li>
+						<li class="col-sm-3">
 							<a class="social" href="index.html" aria-label="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
+						</li>
+						<li class="col-sm-3">
 							<a class="social" href="index.html" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
-					</div>
-				</div>
-			</div>
-	</div>
-</footer>
-<!-- Footer - bloc-8 END -->
+						</li>
+					</ul>
+				</section>
+			</footer>
+			<!-- Footer - bloc-8 END -->
 
-</div>
-<!-- Principal conteneur END -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" defer></script>
-<script src="./js/jqBootstrapValidation.js" defer></script>
-<script src="./js/blocs.js" defer></script>
-<script src="./js/formHandler.js" defer></script>   
+		</div>
+		<!-- Principal conteneur END -->
 
-</body>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" defer></script>
+		<script src="./js/jqBootstrapValidation.js" defer></script>
+		<script src="./js/blocs.js" defer></script>
+		<script src="./js/formHandler.js" defer></script>   
+
+	</body>
 </html>
