--- a/contact.html
+++ b/contact.html
@@ -112,9 +112,11 @@
 						</div>
 						<div class="col-sm-6">
 							<address>
-								contact@agencelapanthere.com<br>
-								2 place Sathonay 69001 Lyon<br>
-								Ouvert de 9h à 18h, du lundi au vendredi<br>
+								<p>
+									contact@agencelapanthere.com<br>
+									2 place Sathonay 69001 Lyon<br>
+									Ouvert de 9h à 18h, du lundi au vendredi<br>
+								</p>S
 							</address>
 						</div>
 					</div>
@@ -123,7 +125,7 @@
 			<!-- bloc-7 END -->
 
 			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" aria-label="Scroll" onclick="scrollToTarget('1' )"><span class="fa fa-chevron-up"></span></a>
+			<a class="bloc-button btn btn-d scrollToTop" href="contact.html" aria-label="Scroll" onclick="scrollToTarget('1' )"><span class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
 
 
