Correction de la soutenance

--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
 				<!-- bloc-2-services -->
 				<article class="bloc bgc-white l-bloc container bloc-md text-center" id="bloc-2-services">
 					<h2>
-						L'agence La Panthère est une agence web design qui aide les entreprises à devenir attractives et visibles sur Internet.
+						A propos de l'Agence La Panthère
 					</h2>
+					<p>
+						L'agence La Panthère est une agence web design qui aide les entreprises à devenir attractives et visibles sur Internet.
+					</p>
 					<section class="col-sm-4">
 						<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						<h3 class="mg-md">
@@ -225,38 +228,6 @@
 						</li>
 					</ul>
 				</section>
-
-				<ul class="centrer container bloc-sm">
-					<li class="col-sm-4">
-						<h4 class="white">
-							Entreprise
-						</h4>
-						<ul>
-							<li><a href="lesmeilleursentreprisesalyon.com">Lesmeilleursentreprisesalyon.com</a></li>
-							<li><a href="travailsurlyon.com">travailsurlyon.com</a></li>
-						</ul>		
-					</li>
-					<li class="col-sm-4">
-						<h4 class="white">
-							Webdesign
-						</h4>
-						<ul>
-							<li><a href="bestwebdesign.com">bestwebdesign.com</a></li>
-							<li><a href="annuairewebdesign.com">annuairewebdesign.com</a></li>
-							<li><a href="toutsavoirsurlewebdesign.com">toutsavoirsurlewebdesign.com</a></li>
-						</ul>
-					</li>
-					<li class="col-sm-4">
-						<h4 class="white">
-							Lyon
-						</h4>
-						<ul>
-							<li><a href="Lyoninformatique.com">betterseo.com</a></li>
-							<li><a href="agencealyon.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-						</ul>
-					</li>
-				</ul>
 			</footer>
 			<!-- Footer - bloc-8 END -->
 
