--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     
 			<!-- bloc-0 -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0">
-				<div class="container bloc-sm">
+				<div class="container bloc-sm navbar">
 					<nav class="navbar-header">
 						<a class="navbar-brand" href="index.html">
 							<img src="img/agence-la-panthere-monochrome.webp" alt="Logo de l'agence La Panthère, entreprise de Web design à Lyon" height="40" />
@@ -116,7 +116,7 @@
 									contact@agencelapanthere.com<br>
 									2 place Sathonay 69001 Lyon<br>
 									Ouvert de 9h à 18h, du lundi au vendredi<br>
-								</p>S
+								</p>
 							</address>
 						</div>
 					</div>
