--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					</header>
 					<div class="row tight-width-whitespace portfolio-row">
 						<section class="col-sm-6 text-center">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/livres_journaux.webp" alt="Photo de journaux pour le portfolio de l'agence La Panthère, entreprise de web design à Lyon." class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/livres_journaux.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/livres_journaux.webp" alt="Photo de journaux pour le portfolio de l'agence La Panthère, entreprise de web design à Lyon." class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -160,7 +160,7 @@
 							</p>
 						</section>
 						<section class="col-sm-6 text-center">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.webp" class="img-responsive portfolio-thumb" alt="Photo d'une photographe pour le portfolio de l'agence La Panthère, entreprise de web design à Lyon." /></a>
+							<a href="#" data-lightbox="img/photographe.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.webp" class="img-responsive portfolio-thumb" alt="Photo d'une photographe pour le portfolio de l'agence La Panthère, entreprise de web design à Lyon." /></a>
 							<h3 class="mg-md">
 								Création d'un site web pour photographes
 							</h3>
@@ -171,7 +171,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<section class="col-sm-6 text-center">
-							<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/materiels_voyage.webp" class="img-responsive portfolio-thumb" alt="Photo de materiel de voyage pour le portfolio de l'agence La Panthère, entreprise de web design à Lyon."/></a>
+							<a href="#" data-lightbox="img/materiels_voyage.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/materiels_voyage.webp" class="img-responsive portfolio-thumb" alt="Photo de materiel de voyage pour le portfolio de l'agence La Panthère, entreprise de web design à Lyon."/></a>
 							<h3 class="mg-md">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -180,7 +180,7 @@
 							</p>
 						</section>
 						<section class="col-sm-6 text-center">
-							<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/agence_mariage.webp" class="img-responsive portfolio-thumb" alt="Photo d'une agence de mariage pour le portfolio de l'agence La Panthère, entreprise de web design à Lyon." /></a>
+							<a href="#" data-lightbox="img/agence_mariage.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/agence_mariage.webp" class="img-responsive portfolio-thumb" alt="Photo d'une agence de mariage pour le portfolio de l'agence La Panthère, entreprise de web design à Lyon." /></a>
 							<h3 class="mg-md">
 								Conception d'un site pour une agence de mariage
 							</h3>
